@startuml

skinparam monochrome true
hide circle
skinparam classAttributeIconSize 0

title "Tipo Pregunta"

class Tipo {
    + respondidoCorrectamente(respuestaCorrecta:Respuesta, respuestaJugador:Respuesta):boolean
}

class VerdaderoFalso {
    + respondidoCorrectamente(respuestaCorrecta:Respuesta, respuestaJugador:Respuesta):boolean
}

class MultipleChoice {
    + respondidoCorrectamente(respuestaCorrecta:Respuesta, respuestaJugador:Respuesta):boolean
}

class OrderedChoice{
    + respondidoCorrectamente(respuestaCorrecta:Respuesta, respuestaJugador:Respuesta):boolean
}

class GroupChoice {
    - grupoATitulo:String
    - grupoBTitulo:String

    + GroupChoice(grupoA:String, grupoB:String)
    + respondidoCorrectamente(respuestaCorrecta:Respuesta, respuestaJugador:Respuesta):boolean
    + getTituloGrupoA():String
    + getTituloGrupoB():String
}

Tipo <<Interface>>

Tipo <|.. GroupChoice
Tipo <|.. VerdaderoFalso
Tipo <|.. MultipleChoice    
Tipo <|.. OrderedChoice

@enduml